kyverno-awsipmgt-ran-package/kyverno-injection-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: CLUSTER_POLICY_NAME # kpt-set: ${core-kyverno-policy-name}
  namespace: kyverno
  annotations:
    policies.kyverno.io/title: Inject Init-Container
    policies.kyverno.io/category: Sample
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      This policy injects Multus NAD annotation to the OAI POD.
spec:
  rules:
  - name: inject-sidecar
    match:
      any:
      - resources:
          selector:
            matchLabels:
              app.kubernetes.io/name: POD_LABEL_VALUE # kpt-set: ${ran-kyverno-pod-label-value}
          kinds:
            - Pod
          operations:
          - CREATE
          - UPDATE
    mutate:
      patchStrategicMerge:
        spec:
          initContainers:
            - name: awsipmgmt
              image: public.ecr.aws/r8l3e1z0/aws-ip-manager:v0.1
              args: [/bin/sh, -c, '/app/script.sh initContainers']
